correction de la version 1

--- a/src/etudiant/rapport.html
+++ b/src/etudiant/rapport.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rédiger un rapport</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -62,7 +62,7 @@
 <body>
 
     <div class="form-container">
-        <form action="send_report.php" method="POST">
+        <form action="/./send_report.php" method="POST">
             <h3>Rédiger un rapport</h3>
 
             <label for="objet">Objet :</label>
