--- a/src/etudiant/conventions.html
+++ b/src/etudiant/conventions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Déposer votre convention de stage</title>
 </head>
 <body>
