--- a/src/page_connexion.html
+++ b/src/page_connexion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -151,6 +151,7 @@
         
         <button type="submit">Se connecter</button>
         <p align="center"><a href="inscription.html">Vous n'avez pas de compte?</a></p>
+        <p align="center"><a href="page_connexion_prof.html">vous êtes prof?</a></p>
     </form>
 </body>
 </html>
